Modify CSS to fix issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,18 +236,24 @@ blockquote p {
 @media (min-width: 320px) and (max-width: 999px) {
    .header-svg {
       width: 80%;
+      margin: 2rem 0;
    }
 
    .header-line {
       width: 80%;
    }
 
+   .site-nav ul {
+      padding-left: 0;
+   }
+
    .site-nav {
-      display: block;
+      width: 100vw;
    }
 
    .nav-link {
       font-size: 1rem;
+      padding: 0 4vw;
    }
 
    .content {
@@ -276,14 +282,22 @@ blockquote p {
       margin-right: 4rem;
    }
 
+   .post-title {
+      font-size: 2rem;
+   }
+
+   .post-content {
+      line-height: 1.75em;
+   }
+
    footer {
       display: block;
-      padding: 4rem 4rem;
+      padding: 4rem 0;
    }
 
    .footer-left {
       margin-bottom: 4rem;
-      min-width: 75vw;
+      min-width: 80vw;
       max-width: fit-content;
       margin-left: auto;
       margin-right: auto;
